--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "author": "Natali Keegan",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
-    "mongoose": "^8.14.2",
-    "validator": "^13.15.0"
+    "mongoose": "^8.1.3",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.26.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.31.0",
+    "globals": "^16.1.0",
     "nodemon": "^3.1.10",
     "prettier": "^2.8.8"
   }
